2eme fonction a completer

--- a/Inpainting.ipynb
+++ b/Inpainting.ipynb
@@ -653,20 +653,26 @@
     "def approximation(patch, dic, alpha_):\n",
     "    vect_patch = patch_to_vec(patch)\n",
     "    \n",
+    "    print(vect_patch.shape)\n",
+    "    \n",
     "    dic_set = []\n",
     "    for k1 in dic.keys():\n",
     "        for k2 in dic[k1].keys():\n",
-    "            dic_set.append(np.concatenate(()))\n",
+    "            dic_set.append(patch_to_vec(dic[k1][k2]))\n",
+    "                        \n",
+    "    dic_set = np.asarray(dic_set)\n",
+    "    print(dic_set.shape)\n",
+    "            \n",
     "            \n",
     "    lasso = Lasso(alpha=alpha_)\n",
-    "    lasso.fit(dict_set, vect_patch)\n",
+    "    lasso.fit(dic_set, vect_patch)\n",
     "    prediction = lasso.predict(dic_set)\n",
     "    \n",
     "    w = lasso.coef_\n",
     "    cost = mean_squared_error(vect_patch, prediction)\n",
     "    \n",
     "    return w, cost\n",
-    "    "
+    "  # Transformer en 1D array pour pouvoir faire l'apprentissage  "
    ]
   },
   {
