partie 2 question 3 _ fonction 3  modif

--- a/Inpainting.ipynb
+++ b/Inpainting.ipynb
@@ -61,18 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def split_1_vs_all(data_train, data_test, num):\n",
-    "    \n",
-    "    \"\"\"   \n",
-    "    Diviser les données train (test) en données en 2 ensembles: le premier correspond à la classe 'num'\\n\",\n",
-    "    le deuxième aux données des autres classes.\\n\",\n",
-    "    \"    data_train: données d'apprentissage\\n\",\n",
-    "    \"    data_test: données d'évaluation\\n\",\n",
-    "    \"    num: le label de la classe à apprendre\\n\",\n",
+    "    \"\"\"   Diviser les données train (test) en données en 2 ensembles: le premier correspond à la classe 'num', le deuxième aux données des autres classes.\n",
+    "            data_train: données d'apprentissage\n",
+    "            data_test: données d'évaluation\n",
+    "            num: le label de la classe à apprendre\n",
     "    \"\"\"\n",
     "    dtrain_num = list()\n",
     "    dtrain_other = list()\n",
@@ -82,50 +79,49 @@
     "    for i in range(len(data_train)):\n",
     "        if int(data_train[i][0]) == num:\n",
     "            dtrain_num.append(np.concatenate((np.asarray([1]), data_train[i,1:]), axis=None))\n",
-    "    \"        else:\\n\",\n",
-    "    \"            dtrain_other.append(np.concatenate((np.asarray([-1]), data_train[i,1:]), axis=None))\\n\",\n",
-    "    \"            \\n\",\n",
-    "    \"    for i in range(len(data_test)):\\n\",\n",
-    "    \"        if int(data_test[i][0]) == num:\\n\",\n",
-    "    \"            dtest_num.append(np.concatenate((np.asarray([1]), data_test[i,1:]), axis=None))\\n\",\n",
-    "    \"        else:\\n\",\n",
-    "    \"            dtest_other.append(np.concatenate((np.asarray([-1]), data_test[i,1:]), axis=None))\\n\",\n",
-    "    \"            \\n\",\n",
-    "    \"    dtrain_num = np.asarray(dtrain_num)\\n\",\n",
-    "    \"    dtest_num = np.asarray(dtest_num)\\n\",\n",
-    "    \"    dtrain_other = np.asarray(dtrain_other)[:len(dtrain_num)]\\n\",\n",
-    "    \"    dtest_num = np.asarray(dtest_other)[:len(dtest_num)]\\n\",\n",
-    "    \"    np.random.shuffle(dtrain_other)\\n\",\n",
-    "    \"    np.random.shuffle(dtest_other)\\n\",\n",
-    "    \"    \\n\",\n",
-    "    \"    dtr = np.concatenate((dtrain_num, dtrain_other))\\n\",\n",
-    "    \"    dts = np.concatenate((dtest_num, dtest_other))\\n\",\n",
-    "    \"    np.random.shuffle(dtr)\\n\",\n",
-    "    \"    np.random.shuffle(dts)\\n\",\n",
-    "    \"    \\n\",\n",
-    "    \"    print(dtr.shape)\\n\",\n",
-    "    \"    print(dts.shape)\\n\",\n",
-    "    \"    \\n\",\n",
-    "    \"    return dtr[:,1:], dtr[:,0].astype(int), dts[:,1:], dts[:,0].astype(int)\""
+    "        else:\n",
+    "            dtrain_other.append(np.concatenate((np.asarray([-1]), data_train[i,1:]), axis=None))\n",
+    "        \n",
+    "    for i in range(len(data_test)):\n",
+    "        if int(data_test[i][0]) == num:\n",
+    "            dtest_num.append(np.concatenate((np.asarray([1]), data_test[i,1:]), axis=None))\n",
+    "        else:\n",
+    "            dtest_other.append(np.concatenate((np.asarray([-1]), data_test[i,1:]), axis=None))\n",
+    "\n",
+    "    dtrain_num = np.asarray(dtrain_num)\n",
+    "    dtest_num = np.asarray(dtest_num)\n",
+    "    dtrain_other = np.asarray(dtrain_other)[:len(dtrain_num)]\n",
+    "    dtest_num = np.asarray(dtest_other)[:len(dtest_num)]\n",
+    "    \n",
+    "    np.random.shuffle(dtrain_other)\n",
+    "    np.random.shuffle(dtest_other)\n",
+    "    \n",
+    "    dtr = np.concatenate((dtrain_num, dtrain_other))\n",
+    "    dts = np.concatenate((dtest_num, dtest_other))\n",
+    "    np.random.shuffle(dtr)\n",
+    "    np.random.shuffle(dts)\n",
+    "    \n",
+    "    #print(dtr.shape)\n",
+    "    #print(dts.shape)\n",
+    "    \n",
+    "    return dtr[:,1:], dtr[:,0].astype(int), dts[:,1:], dts[:,0].astype(int)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (<ipython-input-5-374a04372fdf>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-374a04372fdf>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    \"Xtrain, Ytrain, Xtest, Ytest = split_1_vs_all(data_train, data_test, 6)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Exemple de découpage sur le nombre 7 en utilisant la fonction split_1_vs_all\\n\",\n",
-    "    \"Xtrain, Ytrain, Xtest, Ytest = split_1_vs_all(data_train, data_test, 6)"
+    "# Exemple de découpage sur le nombre 7 en utilisant la fonction split_1_vs_all\n",
+    "Xtrain, Ytrain, Xtest, Ytest = split_1_vs_all(data_train, data_test, 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Protocole expérimental"
    ]
   },
   {
@@ -134,17 +130,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Protocole expérimentale\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"alpha_ = [10**-1, 10**-2, 10**-3, 10**-4, 10**-5, 10**-6, 10**-7, 10**-8, 10**-9]\\n\",\n",
-    "    \"LR_scores = list()\\n\",\n",
-    "    \"LR_coeff = list()\\n\",\n",
-    "    \"Ridge_scores = list()\\n\",\n",
-    "    \"Ridge_coeff = list()\\n\",\n",
-    "    \"Lasso_scores = list()\\n\",\n",
-    "    \"Lasso_coeff = list()\\n\",\n",
-    "    \"\\n\",\n",
-    "    \"for i in range(10):\\n\",\n",
+    "# Protocole expérimentale\n",
+    "    alpha_ = [10**-1, 10**-2, 10**-3, 10**-4, 10**-5, 10**-6, 10**-7, 10**-8, 10**-9]\n",
+    "    LR_scores = list()\n",
+    "    LR_coeff = list()\n",
+    "    Ridge_scores = list()\n",
+    "    Ridge_coeff = list()\n",
+    "    Lasso_scores = list()\n",
+    "    Lasso_coeff = list()\n",
+    "    \n",
+    "    for i in range(10):\n",
     "    \"    \\n\",\n",
     "    \"    Xtrain, Ytrain, Xtest, Ytest = split_1_vs_all(data_train, data_test, i)\\n\",\n",
     "    \"    \\n\",\n",
@@ -297,7 +292,7 @@
    "metadata": {},
    "source": [
     "On constate que le coût MSE est plus faible en train qu'en test.\n",
-    "De même pour le bon score de classification qui est plus faible en train qu'en test."
+    "On remarque que le bon score de classification est plus faible en test qu'en train."
    ]
   },
   {
@@ -706,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,12 +710,10 @@
     "    vect_patch = patch_to_vec(patch)\n",
     "    vect_patch_ = list()\n",
     "    for i in range(vect_patch.shape[0]):\n",
-    "        #if not((vect_patch[i] == [-100, -100, -100]).all()):\n",
     "        for j in range(3):\n",
     "            vect_patch_.append(vect_patch[i][j])\n",
     "    vect_patch = np.asarray(vect_patch_)\n",
     "    \n",
-    "    #print(vect_patch.shape)\n",
     "    \n",
     "    dic_set = []\n",
     "    for k1 in dic.keys():\n",
@@ -734,7 +727,6 @@
     "                        \n",
     "    dic_set = np.asarray(dic_set).T\n",
     "    \n",
-    "    #print(dic_set.shape)\n",
     "            \n",
     "            \n",
     "    lasso = Lasso(alpha=alpha_, tol=0.1)\n",
@@ -746,8 +738,7 @@
     "    t2 = sum([abs(x) for x in w]) * alpha_\n",
     "    cost = mean_squared_error(vect_patch, prediction) + t2\n",
     "    \n",
-    "    return w, cost\n",
-    "  # Transformer en 1D array pour pouvoir faire l'apprentissage  "
+    "    return w, cost"
    ]
   },
   {
@@ -1188,40 +1179,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(13, 20, 20, 3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(dic_to_array(dic2).shape)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "13\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(w2))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 210,
    "metadata": {},
    "outputs": [],
@@ -1238,11 +1195,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def remplissage(image, h, alpha_):\n",
+    "def remplissage_(image, h, alpha_):\n",
     "    \n",
     "    im = image.copy()\n",
     "    # Indice pour le parcours circulaire \n",
@@ -1293,6 +1250,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remplissage(image, h, alpha_):\n",
+    "    \n",
+    "    im = image.copy()\n",
+    "    # Indices pour le parcours circulaire \n",
+    "    ib = h\n",
+    "    jb = h\n",
+    "    ie = im.shape[0]-h\n",
+    "    je = im.shape[1]-h\n",
+    "    \n",
+    "    i1 = 0\n",
+    "    i2 = ie\n",
+    "    j1 = 0\n",
+    "    j2 = je\n",
+    "    \n",
+    "    while(i1 < ie and i2 < ib):\n",
+    "        for j in range(jb+j1, je-j1, 1):\n",
+    "            if((im[i1][j] == [-100, -100, -100]).all()):\n",
+    "                dic = get_dic(im,h,h)\n",
+    "                patch = get_patch(i1,j,h,im)\n",
+    "                w,c = approximation(patch, dic, alpha_)        \n",
+    "                im[i1][j] = prediction(dic, h, w)\n",
+    "                \n",
+    "        for j in range(jb+j1, je-j1, 1):\n",
+    "            if((im[i2][j] == [-100, -100, -100]).all()):\n",
+    "                dic = get_dic(im,h,h)\n",
+    "                patch = get_patch(i2,j,h,im)\n",
+    "                w,c = approximation(patch, dic, alpha_)        \n",
+    "                im[i2][j] = prediction(dic, h, w)\n",
+    "                \n",
+    "        for i in range(ib+i1, ie-i1, 1):\n",
+    "            if((im[i][j1] == [-100, -100, -100]).all()):\n",
+    "                dic = get_dic(im,h,h)\n",
+    "                patch = get_patch(i,j1,h,im)\n",
+    "                w,c = approximation(patch, dic, alpha_)        \n",
+    "                im[i][j1] = prediction(dic, h, w)\n",
+    "                \n",
+    "        for i in range(ib+i1, ie-i1)\n",
+    "    \n",
+    "        i1 += 1\n",
+    "        i2 -= 1\n",
+    "    return im"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 208,
    "metadata": {},
    "outputs": [
@@ -1312,23 +1318,6 @@
    "source": [
     "im = read_im(\"borneo_small.jpg\")\n",
     "show_im(im)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(216, 384, 3)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(im.shape)"
    ]
   },
   {
